tests/ui/feature-gates/feature-gate-export-visibility.stderr
error[E0658]: `#[export_visibility = ...]` is currently unstable
  --> $DIR/feature-gate-export-visibility.rs:4:1
   |
LL | #[export_visibility = "hidden"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123456 <https://github.com/rust-lang/rust/issues/123456> for more information
   = help: add `#![feature(export_visibility)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
